targets/sol/k3s/send/prereqs.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: send-redis
  namespace: apps
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: send-redis
  template:
    metadata:
      labels:
        app: send-redis
    spec:
      securityContext:
        fsGroup: $MY_UID
      containers:
        - name: redis
          image: redis:alpine
          ports:
            - containerPort: 6379
          readinessProbe:
            tcpSocket:
              port: 6379
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
            initialDelaySeconds: 1
          volumeMounts:
            - name: data
              mountPath: /data
          resources:
            limits:
              memory: 256Mi
            requests:
              memory: 64Mi
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: send-redis-data
---
apiVersion: v1
kind: Service
metadata:
  name: send-redis
  namespace: apps
spec:
  ports:
    - port: 6379
      targetPort: 6379
  selector:
    app: send-redis
