targets/sol/k3s/send/send.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: send
  namespace: apps
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: send
  template:
    metadata:
      labels:
        app: send
    spec:
      securityContext:
        fsGroup: $MY_UID
      containers:
        - name: send
          image: registry.gitlab.com/timvisee/send:latest
          securityContext:
            allowPrivilegeEscalation: false
          ports:
            - containerPort: 80
          volumeMounts:
            - name: uploads
              mountPath: /uploads
          resources:
            limits:
              memory: 1Gi
            requests:
              memory: 128Mi
      volumes:
        - name: uploads
          persistentVolumeClaim:
            claimName: send-uploads
---
apiVersion: v1
kind: Service
metadata:
  name: send
  namespace: apps
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: send
