targets/sol/k3s/send/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: send-ingress
  namespace: apps
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`send.$SERVICES_DOMAIN`)
      kind: Rule
      middlewares:
        - name: crowdsec-bouncer
          namespace: base
        - name: forwardauth-authelia
          namespace: base
      services:
        - name: send
          port: 80
  tls:
    secretName: send-prod-tls
